# VAnguard-POrtfolio-REbalance-GUI

./: Cargo.toml  IRS_minimum_distribution_table.csv  README.md  index.html
assets/: sw.js
src/: app.rs  asset.rs  calc.rs  holdings.rs  lib.rs  main.rs
