[package]
name = "vapore-gui"
description = "Vangaurd portfolio rebalancing algorithm"
version = "0.8.4"
authors = ["Rory Coffey <coffeyrt@gmail.com>"]
edition = "2021"
rust-version = "1.72"
license = "Apache-2.0"
readme = "README.md"
keyword = ["Vanguard", "Investment"]
categories = ["finance"]
repository = "https://github.com/Roco-scientist/VAnguard-POrtfolio-REbalance-GUI"

[[bin]]
name = "vapore-gui"
test = false
bench = false
path = "src/main.rs"


[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.13"
anyhow = "1.0"
chrono = "0.4.34"
clap = "2.33"
futures = "0.3"
lazy_static = "1.4"
time = {version = "0.3", features = ["parsing"]}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
apca = "0.28"
tokio = {version = "1", features = ["full"]}
yahoo_finance_api = "2.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
